<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_getpermissions"
            android:title="@string/menu_getpermissions" />
        <item
            android:id="@+id/nav_addnearbyplace"
            android:title="@string/menu_addplace" />
        <item
            android:id="@+id/nav_findplace"
            android:title="@string/menu_findplace" />
        <item
            android:id="@+id/nav_covidstat"
            android:title="@string/menu_covidstat" />
        <item
            android:id="@+id/nav_vaccinereview"
            android:title="@string/menu_vacreview" />
    </group>
</menu>